# Vision-and-Language-Navigation

./: .gitignore  0573.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
notebooks/: vln_demo.ipynb
scripts/: evaluate.py  train.py
src/eval/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
tests/: test_models.py
